src/objects/FieloAlpha__SegmentDomain__c.object
<CustomObject>
    <customHelpPage>FieloAlpha__RedemptionRuleHelpBackEnd</customHelpPage>
    <description>Segments that can access a certain object, like a banner, a reward or a content feed.</description>
    <fields>
        <fullName>FieloAlpha__Banner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banner</label>
        <referenceTo>FieloAlpha__Banner__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>SegmentDomain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Menu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Menu</label>
        <referenceTo>FieloAlpha__Menu__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>SegmentDomain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__News__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content feed</label>
        <referenceTo>FieloAlpha__News__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>SegmentDomain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>FieloAlpha__Promotion__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>SegmentDomain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Reward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reward</label>
        <referenceTo>FieloAlpha__Reward__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>SegmentDomain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Segment__c</fullName>
        <label>Segment</label>
        <referenceTo>FieloAlpha__RedemptionRule__c</referenceTo>
        <relationshipLabel>Segment Domains</relationshipLabel>
        <relationshipName>SegmentDomain</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Navigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Navigation</label>
        <referenceTo>FieloCMS__Navigation__c</referenceTo>
        <relationshipLabel>Segment Domains</relationshipLabel>
        <relationshipName>SegmentDomains</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Segment Domain</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>SegmentDomain Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segment Domains</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloAlpha__ProgramConsistencyBanner</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(FieloAlpha__Banner__c)) &amp;&amp; FieloAlpha__Banner__r.FieloAlpha__Program__c  &lt;&gt;  FieloAlpha__Segment__r.FieloAlpha__Program__c</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Segment__c</errorDisplayField>
        <errorMessage>That segment belongs to another program. You must create the segment in this program before trying to use it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__ProgramConsistencyContentFeed</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(FieloAlpha__News__c)) &amp;&amp; FieloAlpha__News__r.FieloAlpha__Program__c  &lt;&gt;  FieloAlpha__Segment__r.FieloAlpha__Program__c</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Segment__c</errorDisplayField>
        <errorMessage>That segment belongs to another program. You must create the segment in this program before trying to use it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__ProgramConsistencyPromotion</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(FieloAlpha__Promotion__c)) &amp;&amp; FieloAlpha__Promotion__r.FieloAlpha__Program__c  &lt;&gt;  FieloAlpha__Segment__r.FieloAlpha__Program__c</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Segment__c</errorDisplayField>
        <errorMessage>That segment belongs to another program. You must create the segment in this program before trying to use it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__ProgramConsistencyReward</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(FieloAlpha__Reward__c)) &amp;&amp; FieloAlpha__Reward__r.FieloAlpha__Program__c  &lt;&gt;  FieloAlpha__Segment__r.FieloAlpha__Program__c</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Segment__c</errorDisplayField>
        <errorMessage>That segment belongs to another program. You must create the segment in this program before trying to use it.</errorMessage>
    </validationRules>
</CustomObject>